{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 37,
  "lineage": "e3e63c3a-7a74-e75e-fd7f-6a8e0ff98799",
  "resources": [
    {
      "module": "module.dev.module.gcp_vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-17T15:31:28.640-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-252601/global/firewalls/cisco-dev-fw-allow-http",
            "name": "cisco-dev-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-252601/global/networks/cisco-dev",
            "priority": 1000,
            "project": "terraform-252601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-252601/global/firewalls/cisco-dev-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.gcp_vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-04-17T15:31:28.747-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-252601/global/firewalls/cisco-dev-fw-allow-internal",
            "name": "cisco-dev-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-252601/global/networks/cisco-dev",
            "priority": 1000,
            "project": "terraform-252601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-252601/global/firewalls/cisco-dev-fw-allow-internal",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.gcp_compute_k3s",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200407",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-252601/zones/us-central1-a/disks/dev-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-252601/zones/us-central1-a/instances/dev-master",
            "instance_id": "5490507703106637840",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-1-1024",
            "metadata_fingerprint": "62O2NS3-NwY=",
            "name": "dev-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.67.89.152",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-252601/global/networks/cisco-dev",
                "network_ip": "10.128.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-252601/regions/us-central1/subnetworks/cisco-dev",
                "subnetwork_project": "terraform-252601"
              }
            ],
            "project": "terraform-252601",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-252601/zones/us-central1-a/instances/dev-master",
            "service_account": [
              {
                "email": "158134281475-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "module": "module.dev.module.gcp_compute_k3s",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200407",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-252601/zones/us-central1-a/disks/dev-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-252601/zones/us-central1-a/instances/dev-worker",
            "instance_id": "2679416303243465065",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-1-1024",
            "metadata_fingerprint": "62O2NS3-NwY=",
            "name": "dev-worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.67.201.73",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-252601/global/networks/cisco-dev",
                "network_ip": "10.128.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-252601/regions/us-central1/subnetworks/cisco-dev",
                "subnetwork_project": "terraform-252601"
              }
            ],
            "project": "terraform-252601",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-252601/zones/us-central1-a/instances/dev-worker",
            "service_account": [
              {
                "email": "158134281475-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "module": "module.dev.module.gcp_vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/terraform-252601/global/networks/cisco-dev",
            "name": "cisco-dev",
            "project": "terraform-252601",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-252601/global/networks/cisco-dev"
          }
        }
      ]
    }
  ]
}